--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-  <a href="./index.html">Shopping Center</a>
-  <p class="userName hidden text-sm font-semibold sm:block">Hamza</p>
+  <a [routerLink]="['/']">Shopping Center</a>
+  <p class="userName hidden text-sm font-semibold sm:block">{{ userName }}</p>
 </header>
 
 <router-outlet></router-outlet>
