--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -12,7 +12,7 @@
     class="mx-auto max-w-lg bg-white rounded-lg shadow-md p-6 hidden"
     id="productCard"
   >
-    <a href="../products/products.html" class="text-blue-500 mb-5 inline-block"
+    <a [routerLink]="['/products']" class="text-blue-500 mb-5 inline-block"
       ><- Back To Products</a
     >
     <h1 class="text-2xl font-bold mb-4" class="product-title">
@@ -42,7 +42,7 @@
       Weight: {{ product.weight }} g
     </p>
     <p class="text-gray-700 mb-2" class="product-dimensions">
-      Dimensions: {{ product.dimensions.wclassth }} x
+      Dimensions: {{ product.dimensions.width }} x
       {{ product.dimensions.height }} x {{ product.dimensions.depth }} cm
     </p>
     <p class="text-gray-700 mb-2" class="product-warranty">
@@ -67,11 +67,15 @@
       [src]="product.meta.qrCode"
       alt="QR Code"
     />
-    <button id="addToCartButton" (click)="addToCart(product)">
+    <button
+      *ngIf="!productinCart"
+      id="addToCartButton"
+      (click)="addToCart(product)"
+    >
       Add to Cart
     </button>
-    <p id="cartMessage" class="mt-2 text-green-500 hclassden">
-      Product added to cart!
-    </p>
+    <button *ngIf="productinCart" id="addToCartButton" [routerLink]="['/cart']">
+      Go to Cart
+    </button>
   </div>
 </div>
