--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,10 @@
     <p
       class="message mb-4 text-sm font-medium text-stone-600 sm:text-base mb-4"
     >
-      👋 Welcome! Please start by telling us your name:
+      {{ this.messgae }}
     </p>
     <input
+      *ngIf="!isLogin"
       required
       id="userName"
       name="userName"
@@ -13,7 +14,6 @@
       ngModel
       type="text"
       placeholder="Your full name"
-      class="mb-8 w-72 rounded-full py-3 px-4 text-sm md:text-sm font-semibold text-stone-800 bg-stone-100 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-offset-2"
     />
     <small
       *ngIf="
@@ -23,10 +23,8 @@
       >Please Enter Your Name</small
     >
     <div>
-      <button
-        class="navigate-btn py-3 px-4 inline-block rounded-full bg-yellow-400 text-sm md:text-sm font-semibold uppercase text-stone-800 transition-colors duration-300 hover:bg-yellow-300 focus:bg-yellow-300 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-offset-2 disabled:cursor-not-allowed"
-      >
-        Start Shopping
+      <button class="navigate-btn" (click)="navigateToProducts()">
+        {{ this.buttonContent }}
       </button>
     </div>
   </form>
